0527 - 아이콘 및 이름 수정

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">Journey</string>
+    <string name="app_name">Nolleogasil</string>
     <string name="drawer_open">Open</string>
     <string name="drawer_close">Close</string>
     <!-- TODO: Remove or change this placeholder text -->
